# mpllegends

./: README.md  pyproject.toml  setup.py
src/mpllegends/: entries.py  legend.py
tests/: test.py
